# andor-chimera-pymeasure

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: pymeasure_demo.py
src/andor_pymeasure/: __init__.py  __main__.py  app.py
src/andor_pymeasure/instruments/: __init__.py  andor_camera.py  andor_spectrograph.py  delay_stage.py  mock.py  motion_controller.py
src/andor_pymeasure/procedures/: __init__.py  pump_probe.py  spectrum.py  wavelength_scan.py
src/andor_qt/: __init__.py  __main__.py  app.py
src/andor_qt/core/: __init__.py  config.py  event_bus.py  experiment_queue.py  hardware_manager.py  motion_manager.py  sequencer_adapter.py  signals.py
src/andor_qt/procedures/: __init__.py  base.py  (+1 more)
tests/: conftest.py  pymeasure_test.py  test_andor_instrument.py  test_camera.py  test_delay_stage.py  test_spectrograph.py
tests/e2e/: conftest.py  test_full_workflow.py
tests/instruments/: __init__.py  test_motion_controller.py
tests/procedures/: __init__.py  test_pump_probe.py  test_spectrum_procedure.py  test_wavelength_scan.py
tests/qt/: __init__.py  conftest.py  test_acquire_control.py  test_acquire_integration.py  test_app_config.py  test_benchmark_dialog.py  test_config.py  test_event_bus.py  test_experiment_queue.py  test_hardware_manager.py  test_main_window_menu.py  test_menu_bar.py  test_motion_manager.py  test_sequencer_adapter.py  test_sequencer_integration.py  test_shutdown_dialog.py  test_shutdown_integration.py  test_spectrum_overlay.py  test_temperature_monitor.py  test_trace_integration.py  test_trace_list.py  test_widgets.py
(+26 files in other folders)
