[project]
name = "andor-chimera-pymeasure"
version = "0.1.0"
description = "PyMeasure and Qt-based Andor spectrometer control"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "pymeasure>=0.15.0",
    "pyqtgraph>=0.13.3",
    "pyside6>=6.6.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
andor-pymeasure = "andor_pymeasure.app:main"
andor-qt = "andor_qt.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/andor_pymeasure", "src/andor_qt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
